--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,32 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
+# FIND_PACKAGE(PCL 1.8 REQUIRED)
 FIND_PACKAGE(Eigen3 REQUIRED)
+FIND_PACKAGE(OpenCV REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(Assimp REQUIRED)
+FIND_PACKAGE(NanoGUI REQUIRED)
 
 SET(PROJECT_INCLUDE_DIRS 
-	${EIGEN3_INCLUDE_DIR})
+#	${PCL_INCLUDE_DIRS} 
+	${EIGEN3_INCLUDE_DIR} 
+	${OpenCV_INCLUDE_DIRS} 
+	${ASSIMP_INCLUDE_DIR}
+	${NANOGUI_INCLUDE_DIRS})
 
 INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIRS})
 
-SET(SRCS src/main.cc)
+SET(SRCS src/main.cc
+	src/gui.h
+	src/gui.cc)
 
-set(PROJECT_LIBRARIES
-	${OPENGL_LIBRARIES})
+SET(PROJECT_LIBRARIES 
+	${OpenCV_LIBS} 
+	${OPENGL_LIBRARIES} 
+	${NANOGUI_LIBRARY}
+#	${PCL_LIBRARIES} 
+	${assimp_LIBRARIES})
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBRARIES})
-CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
